--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,10 @@ h1 {
     border-radius: 10px;
     padding: 10px;
 } 
+.background-icon-cat:hover {
+    background-color: rgb(183, 183, 37);
+
+}
 .container {
     background-color: rgb(255, 255, 255);
     width: 80%;
